--- a/spec/dummy/app/views/layouts/application.html.erb
+++ b/spec/dummy/app/views/layouts/application.html.erb
@@ -2,8 +2,9 @@
 <html>
 <head>
   <title>Dummy</title>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
-  <%= javascript_include_tag "https://getfirebug.com/firebug-lite-debug.js#enableTrace", "data-turbolinks-track" => true %>
+  <%= javascript_include_tag "-https://getfirebug.com/firebug-lite-debug.js#enableTrace", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
 </head>
