--- a/app/views/uploadbox/images/_uploads_many.slim
+++ b/app/views/uploadbox/images/_uploads_many.slim
@@ -1,40 +1,51 @@
-= form.fields_for :image do
+= form.fields_for upload_name do |f|
+  / forces multipart/form-data
+  = f.file_field :temp, style: 'display: none'
+
   div data-component="GalleryUploader"
-    .uploadbox-image-uploader.uploads-many data-container="uploader" style="width: #{width}px; height: #{height}px;"
+    - if browser.ie? and browser.version.to_i <= 9
       - if namespace
-        input name="[#{resource.class.name.underscore}][#{namespace}]#{upload_name}[]" data-item="id" type="hidden"
+        input name="[#{resource.class.name.underscore}][#{namespace}]#{upload_name}[]" data-item="id" type="file"
       - else
-        input name="[#{resource.class.name.underscore}]#{upload_name}[]" data-item="id" type="hidden"
+        input name="[#{resource.class.name.underscore}]#{upload_name}[]" data-item="id" type="file"
+    - else
 
-      .fileupload data-provides="fileupload" class="fileupload-new"
-        .fileupload-preview.thumbnail data-version="#{version}" data-width="#{width}" data-height="#{height}" style="width: #{width}px; height: #{height}px;"
+      .uploadbox-image-uploader.uploads-many data-container="uploader" style="width: #{width}px; height: #{height}px;"
+        - if namespace
+          input name="[#{resource.class.name.underscore}][#{namespace}]#{upload_name}[]" data-item="id" type="hidden"
+        - else
+          input name="[#{resource.class.name.underscore}]#{upload_name}[]" data-item="id" type="hidden"
 
-        .fileupload-actions
-          span.btn.btn-file style="width: #{width}px; height: #{height}px;"
-            span.fileupload-new = choose_label
-            span.fileupload-exists = update_label
+        .fileupload data-provides="fileupload" class="fileupload-new"
+          .fileupload-preview.thumbnail data-version="#{version}" data-width="#{width}" data-height="#{height}" style="width: #{width}px; height: #{height}px;"
 
-            input type="file" name="image[file]" data-callback-url="#{uploadbox.images_path}" data-find-url="#{uploadbox.find_images_path(format: :json)}" data-url="https://#{CarrierWave::Uploader::Base.fog_directory}.s3.amazonaws.com/" accept="image/png image/x-png, image/gif, image/jpeg" style="display: none; width: #{width}px; height: #{height}px;" multiple="true"
-            input type="hidden" name="policy" value="#{s3_policy}"
-            input type="hidden" name="signature" value="#{s3_signature}"
-            input type="hidden" name="AWSAccessKeyId" value="#{CarrierWave::Uploader::Base.fog_credentials[:aws_access_key_id]}"
-            input type="hidden" name="acl" value="public-read"
-            input type="hidden" name="key"
+          .fileupload-actions
+            span.btn.btn-file style="width: #{width}px; height: #{height}px;"
+              span.fileupload-new = choose_label
+              span.fileupload-exists = update_label
 
-            input type="hidden" name="image[imageable_type]" value="#{resource.class.base_class}"
-            input type="hidden" name="image[upload_name]" value="#{upload_name}"
-          - if removable
-            - if resource.send(upload_name).present?
-              = link_to destroy_label, uploadbox.image_path(resource.send(upload_name)), class: 'btn fileupload-exists', remote: true, method: :delete
-            - else
-              = link_to destroy_label, '#', class: 'btn fileupload-exists', remote: true, method: :delete
+              input type="file" name="image[file]" data-callback-url="#{uploadbox.images_path}" data-find-url="#{uploadbox.find_images_path(format: :json)}" data-url="https://#{CarrierWave::Uploader::Base.fog_directory}.s3.amazonaws.com/" accept="image/png image/x-png, image/gif, image/jpeg" style="display: none; width: #{width}px; height: #{height}px;" multiple="true"
+              input type="hidden" name="policy" value="#{s3_policy}"
+              input type="hidden" name="signature" value="#{s3_signature}"
+              input type="hidden" name="AWSAccessKeyId" value="#{CarrierWave::Uploader::Base.fog_credentials[:aws_access_key_id]}"
+              input type="hidden" name="acl" value="public-read"
+              input type="hidden" name="key"
+
+              input type="hidden" name="image[imageable_type]" value="#{resource.class.base_class}"
+              input type="hidden" name="image[upload_name]" value="#{upload_name}"
+            - if removable
+              - if resource.send(upload_name).present?
+                = link_to destroy_label, uploadbox.image_path(resource.send(upload_name)), class: 'btn fileupload-exists', remote: true, method: :delete
+              - else
+                = link_to destroy_label, '#', class: 'btn fileupload-exists', remote: true, method: :delete
 
     - for image in resource.send(upload_name)
       .uploadbox-image-uploader.uploads-many data-component="UploaderPreview" data-container="uploader" style="width: #{width}px; height: #{height}px;"
-        - if namespace
-          input name="[#{resource.class.name.underscore}][#{namespace}]#{upload_name}[]" data-item="id" type="hidden" value="#{image.id}"
-        - else
-          input name="[#{resource.class.name.underscore}]#{upload_name}[]" data-item="id" type="hidden" value="#{image.id}"
+        - unless browser.ie? and browser.version.to_i <= 9
+          - if namespace
+            input name="[#{resource.class.name.underscore}][#{namespace}]#{upload_name}[]" data-item="id" type="hidden" value="#{image.id}"
+          - else
+            input name="[#{resource.class.name.underscore}]#{upload_name}[]" data-item="id" type="hidden" value="#{image.id}"
 
         .fileupload data-provides="fileupload" class="fileupload-exists"
           .fileupload-preview.thumbnail data-version="#{version}" data-width="#{width}" data-height="#{height}" style="width: #{width}px; height: #{height}px;"
