Upload of any file

--- a/app/assets/stylesheets/uploadbox.sass
+++ b/app/assets/stylesheets/uploadbox.sass
@@ -202,3 +202,45 @@
   .fileupload-uploading
     .btn.fileupload-exists
       display: none
+
+[data-component="FileUploader"]
+  height: 60px
+  width: 300px
+
+  .fileupload-preview.preview
+    a
+      display: block
+      text-align: left
+    a:hover
+      background: transparent
+      color: black
+
+  .fileupload-exists
+    .btn.fileupload-exists
+      display: block
+    // .fileupload-new
+    //   display: none !important
+
+  .fileupload
+    background: transparent
+
+  .fileupload-actions
+    background: transparent
+    height: 50px
+    width: 230px
+
+    .btn-file
+      background: transparent
+
+    .fileupload-new
+      width: 200px
+      display: block
+      height: 30px
+      line-height: 30px
+      position: static
+      margin-top: 0 !important
+      margin-left: 0 !important
+
+
+  .fileupload-actions
+    position: static
