--- a/spec/dummy/app/views/posts/_form.slim
+++ b/spec/dummy/app/views/posts/_form.slim
@@ -11,6 +11,10 @@
     = f.label 'Foto'
     = f.uploads_one :picture, preview: :big, choose_label: 'Escolher Lorem ipsum dolor'
 
+  .field
+    = f.label 'Anexo'
+    = f.uploads_one :attachment
+
   hr
   p = @post.images.size
   .field
